# lcls_cu_injector_ml_model

./: .gitignore  Dockerfile  MANIFEST.in  README.md  deploy.yaml  deployment.yaml  environment.yml  info.py  k2eg_no_mlflow_ca.py  k2eg_no_mlflow_pva.py  lume_model-mlflow.ipynb  lume_model.ipynb  lume_model_epics-mlflow.ipynb  lume_model_epics.ipynb  model_config.yaml  pyproject.toml  requirements.txt  run_lume_model.py  run_lume_model_epics.py  torch_model-mlflow.ipynb  torch_model.ipynb  torch_model.py
config/: k2eg-config  lcls.ini
examples/: lumetorchmodel_usage_example.py
k2eg/: k2eg_mlflow.py  k2eg_mlflow_continuous.py  k2eg_no_mlflow_ca.py  k2eg_no_mlflow_pva.py  k2eg_output.py  k2eg_output_p4p.py
lcls_cu_inj_model/: __init__.py  loader.py
lcls_cu_inj_model/resources/: model_config.yaml
mlflow/: lume_model-mlflow-integration-demo.ipynb  lume_model-mlflow.ipynb  lume_model_epics-mlflow.ipynb  run_lume_model.py  run_lume_model_epics.py  torch_model-mlflow.ipynb  torch_model.py
model/: pv_model.yml  pv_module.yml  pv_variables.yml  sim_model.yml  sim_module.yml  sim_variables.yml
torch/: adaptive_nn.py  benchmarking.ipynb  custom_mean.py  sim_pv_transform.py
